--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: auto;
+    height: 80vh;
     padding: 50px;
 
     @media screen and (max-width: 100%) {
@@ -14,10 +14,8 @@
 
   }
   .dark .home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Esto asegurará que el div se extienda por toda la altura de la ventana */
+    
+    height: 80vh;
   }
   
   
