--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -87,12 +87,16 @@ body {
 
  
   button {
+    height: 30px;
+    width: 80px;
     cursor: pointer;
     background-color: #007bff;
-    color: #fff;
     padding: 8px 16px;
     border: none;
     border-radius: 5px;
+  } 
+  button:hover{
+    background: #3b64ec;
   }
   .proy_detail{
     padding: 5px;
