--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,12 +1,19 @@
 .contact{
     height: auto;
-    padding: 50px;
-    
+    background-color: #4ECDC4; 
+box-shadow: 0 2px 4px rgba(78, 205, 196, 0.2), 0 0 10px rgba(78, 205, 196, 0.1);
+
     @media screen and (max-width: 100%) {
         max-width: 90%;
         font-size: 14px;
         margin: 0.5rem auto;
       }
+
+    }
+    .dark .contact{
+        background-color: #333333; /* Gris oscuro */
+        box-shadow: 0 2px 4px rgba(51, 51, 51, 0.2), 0 0 10px rgba(51, 51, 51, 0.1);
+        
     }
 
 .contact_content {
@@ -26,8 +33,8 @@
 
 .contact_footer { 
     margin-top: 50px;
-    padding: 20px;
     color: #888;
+    margin-bottom: -30px;
 }
 
 
@@ -38,10 +45,7 @@
         border-radius: 10px;
         margin: 0 auto;
     }
-    .contact_title {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
+
     .contact_data {
         margin-bottom: 20px;
     }
@@ -62,7 +66,6 @@
         font-size: 14px;
     }
     .contact_footer {
-      
         font-size: 14px;
         
     }
@@ -73,10 +76,7 @@
         border-radius: 10px;
         margin: 0 auto;
     }
-    .contact_title {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
+ 
     .contact_data {
         margin-bottom: 20px;
     }
@@ -98,7 +98,6 @@
         font-size: 16px;
     }
     .contact_footer {
-        margin-top: 150px;
         font-size: 14px;
     }
 }
@@ -108,10 +107,7 @@
         border-radius: 10px;
         margin: 0 auto;
     }
-    .contact_title {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
+   
     .contact_data {
         margin-bottom: 20px;
     }
@@ -133,8 +129,7 @@
         font-size: 18px;
     }
     .contact_footer {
-        margin-top: 90px;
-        font-size: 16px;
+        font-size: 14px;
     }
 }
 @media (min-width: 992px)and (max-width: 1200px){
@@ -143,10 +138,7 @@
         border-radius: 10px;
         margin: 0 auto;
     }
-    .contact_title {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
+ 
     .contact_data {
         margin-bottom: 50px;
     }
@@ -168,8 +160,7 @@
         font-size: 18px;
     }
     .contact_footer {
-        margin-top: 90px;
-        font-size: 18px;
+        font-size: 16px;
     }
 }
 @media (min-width: 1200px) {
@@ -178,10 +169,6 @@
         border-radius: 10px;
         margin: 0 auto;
     }
-    .contact_title {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
     .contact_data {
         margin-bottom: 50px;
     }
@@ -203,7 +190,6 @@
         font-size: 18px;
     }
     .contact_footer {
-        margin-top: 60px;
-        font-size: 18px;
+        font-size: 16px;
     }
 }
