--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,5 +1,8 @@
 /* Estilos para el contenido de experiencia */
 .espe{
+  display: flex;
+  justify-content: center;
+  text-align: center;
   height: auto;
   padding: 10px;
 
@@ -43,11 +46,6 @@
     color: #7e7e7e;
   }
   
-  /* Estilos para los párrafos de sección */
-  .espe section p {
-    font-size: 16px;
-    color: #777;
-  }
   
   .espe_ultimo {
     margin-top: 20px;
@@ -95,10 +93,7 @@ justify-content: center;
       color: #7e7e7e;
     }
     
-    .espe section p {
-      font-size: 12px;
-      color: #777;
-    }
+  
      
     .espe_ultimo {
       margin-top: 20px;
@@ -109,9 +104,6 @@ justify-content: center;
     }
     .espe_ultimo h3{
       font-size: 15px;
-    }
-    .espe_ultimo p{
-      font-size: 12px;
     }
     h3{
     display: flex;
@@ -141,11 +133,6 @@ justify-content: center;
       font-weight: bold;
       color: #7e7e7e;
     }
-    
-    .espe section p {
-      font-size: 14px;
-      color: #777;
-    }
      
     .espe_ultimo {
       margin-top: 20px;
@@ -156,9 +143,6 @@ justify-content: center;
     }
     .espe_ultimo h3{
       font-size: 17px;
-    }
-    .espe_ultimo p{
-      font-size: 14px;
     }
     h3{
     display: flex;
@@ -186,11 +170,6 @@ justify-content: center;
       color: #7e7e7e;
     }
     
-    .espe section p {
-      font-size: 16px;
-      color: #777;
-    }
-     
     .espe_ultimo {
       margin-top: 20px;
       margin-left: 10px;
@@ -201,9 +180,6 @@ justify-content: center;
     .espe_ultimo h3{
       width: 100%;
       font-size: 20px;
-    }
-    .espe_ultimo p{
-      font-size: 16px;
     }
   }
   @media (min-width: 992px)and (max-width: 1200px){
@@ -227,11 +203,6 @@ justify-content: center;
       font-weight: bold;
       color: #7e7e7e;
     }
-    
-    .espe section p {
-      font-size: 17px;
-      color: #777;
-    }
      
     .espe_ultimo {
       margin-top: 20px;
@@ -242,9 +213,6 @@ justify-content: center;
     .espe_ultimo h3{
       width: 100%;
       font-size: 22px;
-    }
-    .espe_ultimo p{
-      font-size: 17px;
     }
   }
   @media (min-width: 1200px) {
@@ -267,11 +235,6 @@ justify-content: center;
       font-weight: bold;
       color: #7e7e7e;
     }
-    
-    .espe section p {
-      font-size: 18px;
-      color: #777;
-    }
      
     .espe_ultimo {
       margin-top: 20px;
@@ -282,8 +245,5 @@ justify-content: center;
     .espe_ultimo h3{
       width: 100%;
       font-size: 25px;
-    }
-    .espe_ultimo p{
-      font-size: 18px;
     }
   }
