--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,23 +1,20 @@
 
-body {
-  background-color: #f7fafc;
-
-}
-
 .header {
-  background-color: #ececec;
-  padding: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: fixed ;
+  background-color: #87CEEB;
+  width: 100%;
+  z-index: 1;
+  transition: all 0s ease;
+  padding-top: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.1);
 
-  @media screen and (max-width: 100%) {
-    max-width: 90%;
-    font-size: 14px;
-    margin: 0.5rem auto;
-  }
+
 }
 .dark .header {
   background-color: #000000;
   color: #ffffff;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1), 0 0 10px rgba(255, 255, 255, 0.1);
+
 }
 
 .header_ul {
@@ -34,16 +31,7 @@ body {
   margin-top: 10px;
 }
 
-/* Estilos para los botones */
-.mi-boton-genial {
-  cursor: pointer;
-  background-color: #007bff;
-  color: #fff;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 5px;
-  margin: 5px;
-}
+
 
 /* Estilos para la responsividad */
 @media (max-width: 577px) {
