--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 .contact{
     height: auto;
-    background-color: #4ECDC4; 
+    background-color: #d2d2d2; 
 box-shadow: 0 2px 4px rgba(78, 205, 196, 0.2), 0 0 10px rgba(78, 205, 196, 0.1);
 
     @media screen and (max-width: 100%) {
@@ -11,7 +11,7 @@ box-shadow: 0 2px 4px rgba(78, 205, 196, 0.2), 0 0 10px rgba(78, 205, 196, 0.1);
 
     }
     .dark .contact{
-        background-color: #333333; /* Gris oscuro */
+        background-color: #000000; /* Gris oscuro */
         box-shadow: 0 2px 4px rgba(51, 51, 51, 0.2), 0 0 10px rgba(51, 51, 51, 0.1);
         
     }
