--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   height: auto;
+  padding: 100px;
 
   @media screen and (max-width: 100%) {
     max-width: 90%;
